--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,64 +1,67 @@
 <% include ./partials/header.ejs %>
 
-<div class = "container">
-    <div class = "pl-3 pr-3">
-        <h1 class = "text-center"> <%=items.length%> results for "<%= query %>"</h1>
-    	<table id = "results">
-            <% if (items.length > 0) { %>
-                <tr>
-                    <th></th>
-                    <th>ID</th> 
-                    <th>ITEM LIMIT</th> 
-                    <th>CURRENT PRICE</th>
-                    <th>CURRENT VOLUME</th>
-                    <th>CURRENT TREND</th>
-                    <th>CURRENT TREND DURATION</th>
-                    <th>MEMBERS ONLY</th>
-                </tr>
-            <% } %>
-            <% for(var i=0; i<items.length; i++) { %>
-                   <tr class = "item d-none">
-                       <td> 
-                           <% if (user) { %>
-                            <button class = "additem" 
-                            data-item-name = "<%= items[i].name %>" 
-                            data-item-name-lower = "<%= items[i].name_lower %>" 
-                            data-item-price = "<%= items[i].statdata.currentPrice.price %>"
-                            data-item-updated = "<%= items[i].lastUpdated.valueOf()%>"
-                            data-item-id = "<%= items[i].id %>">
-                                   <i class = "fa fa-plus"> </i> 
-                               </button>
-                           <% } %>
-                           <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
-                           <img src = "/images/small/<%=items[i].id%>.gif">
-                        </td>
-                       <td> <%= items[i].id %> </td>
-                       <td> <%= items[i].limit %> </td>
-                       <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
-                       <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
-                       <td> <%= items[i].statdata.currentTrend%> </td>
-                       <td> <%= items[i].statdata.currentTrendDuration%> </td>
-                       <td> <%= items[i].members %> </td>
-                   </tr>
-            <% } %>
-        </table>
-    </div>
-
-    <% if (items.length > 0) { %>
-        <div class = "d-flex justify-content-center">
-            <div>
-                <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
-                <button class = "btn btn-outline-primary" id = "prev"> < </button>
-                <% for(var i = 1; i <= Math.ceil((items.length) / 10); i++) { %>
-                <a class = "btn btn-outline-primary d-none" href = "#<%=i%>"><%=i%> </a>
+<div class = "container-fluid">
+    <div class = "row justify-content-around">
+        <% include ./partials/profits.ejs %>
+        <div class = "col-8 mt-5">
+            <h1 class = "text-center"> <%=items.length%> results for "<%= query %>"</h1>
+            <table id = "results">
+                <% if (items.length > 0) { %>
+                    <tr>
+                        <th></th>
+                        <th>ID</th> 
+                        <th>ITEM LIMIT</th> 
+                        <th>CURRENT PRICE</th>
+                        <th>CURRENT VOLUME</th>
+                        <th>CURRENT TREND</th>
+                        <th>CURRENT TREND DURATION</th>
+                        <th>MEMBERS ONLY</th>
+                    </tr>
                 <% } %>
-                <button class = "btn btn-outline-primary" id = "next"> > </button>
-                <button class = "btn btn-outline-primary" id = "nextRow"> >> </button>
-            </div>
+                <% for(var i=0; i<items.length; i++) { %>
+                       <tr class = "item d-none">
+                           <td> 
+                               <% if (user) { %>
+                                <button class = "additem" 
+                                data-item-name = "<%= items[i].name %>" 
+                                data-item-name-lower = "<%= items[i].name_lower %>" 
+                                data-item-price = "<%= items[i].statdata.currentPrice.price %>"
+                                data-item-updated = "<%= items[i].lastUpdated.valueOf()%>"
+                                data-item-id = "<%= items[i].id %>">
+                                       <i class = "fa fa-plus"> </i> 
+                                   </button>
+                               <% } %>
+                               <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
+                               <img src = "/images/small/<%=items[i].id%>.gif">
+                            </td>
+                           <td> <%= items[i].id %> </td>
+                           <td> <%= items[i].limit %> </td>
+                           <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
+                           <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
+                           <td> <%= items[i].statdata.currentTrend%> </td>
+                           <td> <%= items[i].statdata.currentTrendDuration%> </td>
+                           <td> <%= items[i].members %> </td>
+                       </tr>
+                <% } %>
+            </table>
         </div>
-    <% } %>
+        <% include ./partials/losses.ejs %>
+    </div>
 </div>
 
+<% if (items.length > 0) { %>
+    <div class = "d-flex justify-content-center">
+        <div>
+            <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
+            <button class = "btn btn-outline-primary" id = "prev"> < </button>
+            <% for(var i = 1; i <= Math.ceil((items.length) / 10); i++) { %>
+            <a class = "btn btn-outline-primary d-none" href = "#<%=i%>"><%=i%> </a>
+            <% } %>
+            <button class = "btn btn-outline-primary" id = "next"> > </button>
+            <button class = "btn btn-outline-primary" id = "nextRow"> >> </button>
+        </div>
+    </div>
+<% } %>
 
 <script>
 //for adding investments
