--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -1,62 +1,68 @@
 <% include ./partials/header.ejs %>
 
 
-<div class = "container">
-    <div class = "pl-3 pr-3">
-        <h1> sorted results </h1>
-    	<table id = "results">
-    		<tr>
-    		    <th></th>
-                <th>ID</th> 
-                <th>ITEM LIMIT</th> 
-                <th>CURRENT PRICE</th>
-                <th>CURRENT VOLUME</th>
-                <th>CURRENT TREND</th>
-                <th>CURRENT TREND DURATION</th>
-                <th>MEMBERS ONLY</th>
-                <% if (progressbars) { %>
-                    <th>SCORE</th>
-                <% } %>
-    		</tr>
-            <% for(var i=0; i < items.length; i++) { %>
-                <tr class = "item d-none">
-                    <td> 
-                        <% if (user) { %>
-                            <button class = "additem" 
-                            data-item-name = "<%= items[i].name %>" 
-                            data-item-name-lower = "<%= items[i].name_lower %>" 
-                            data-item-price = "<%= items[i].statdata.currentPrice.price %>"
-                            data-item-updated = "<%= items[i].lastUpdated.valueOf() %>"
-                            data-item-id = "<%= items[i].id %>">
-                                <i class = "fa fa-plus"> </i> 
-                            </button>
-                        <% } %>
-                        <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
-                        <img src = "/images/small/<%=items[i].id%>.gif">
-                     </td>
-                    <td> <%= items[i].id %> </td>
-                    <td> <%= items[i].limit %> </td>
-                    <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
-                    <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
-                    <td> <%= items[i].statdata.currentTrend%> </td>
-                    <td> <%= items[i].statdata.currentTrendDuration%> </td>
-                    <td> <%= items[i].members %> </td>
+<div class = "container-fluid">
+    <div class = "row justify-content-around">
+        <% include ./partials/profits.ejs %>
+        <div class = "col-8 mt-5">
+            <h1> sorted results </h1>
+        	<table id = "results">
+        		<tr>
+        		    <th></th>
+                    <th>ID</th> 
+                    <th>ITEM LIMIT</th> 
+                    <th>CURRENT PRICE</th>
+                    <th>CURRENT VOLUME</th>
+                    <th>CURRENT TREND</th>
+                    <th>CURRENT TREND DURATION</th>
+                    <th>MEMBERS ONLY</th>
                     <% if (progressbars) { %>
-                        <td>
-                             <div class="progress">
-                            <%  for (var q = 0; q < progressbars.length; q ++) { %>
-                              <div class="progress-bar" role="progressbar" 
-                              style="width:<%=progressbars[q].percentages[i]%>%; background-color:<%=progressbars[q].color%>">
-                              </div>
-                            <% } %>
-                            </div>
-                        </td>
+                        <th>SCORE</th>
                     <% } %>
-                </tr>
-            <% } %>
-        </table>
+        		</tr>
+                <% for(var i=0; i < items.length; i++) { %>
+                    <tr class = "item d-none">
+                        <td> 
+                            <% if (user) { %>
+                                <button class = "additem" 
+                                data-item-name = "<%= items[i].name %>" 
+                                data-item-name-lower = "<%= items[i].name_lower %>" 
+                                data-item-price = "<%= items[i].statdata.currentPrice.price %>"
+                                data-item-updated = "<%= items[i].lastUpdated.valueOf() %>"
+                                data-item-id = "<%= items[i].id %>">
+                                    <i class = "fa fa-plus"> </i> 
+                                </button>
+                            <% } %>
+                            <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
+                            <img src = "/images/small/<%=items[i].id%>.gif">
+                         </td>
+                        <td> <%= items[i].id %> </td>
+                        <td> <%= items[i].limit %> </td>
+                        <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
+                        <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
+                        <td> <%= items[i].statdata.currentTrend%> </td>
+                        <td> <%= items[i].statdata.currentTrendDuration%> </td>
+                        <td> <%= items[i].members %> </td>
+                        <% if (progressbars) { %>
+                            <td>
+                                 <div class="progress">
+                                <%  for (var q = 0; q < progressbars.length; q ++) { %>
+                                  <div class="progress-bar" role="progressbar" 
+                                  style="width:<%=progressbars[q].percentages[i]%>%; background-color:<%=progressbars[q].color%>">
+                                  </div>
+                                <% } %>
+                                </div>
+                            </td>
+                        <% } %>
+                    </tr>
+                <% } %>
+            </table>
+        </div>
+        <% include ./partials/losses.ejs %>
     </div>
-    <% if (items.length > 0) { %>
+</div>
+
+<% if (items.length > 0) { %>
         <div class = "d-flex justify-content-center">
             <div>
                 <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
@@ -69,7 +75,6 @@
             </div>
         </div>
     <% } %>
-</div>
 
 
 <script>
