--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,13 @@
 		<div id = "featurecontainer" class = "col-8 mt-4">
 			<div class = "container-fluid">
 				<div class = "row justify-content-around">
-					<div class ="col-5 border">
+					<div class ="col-5 border mainfeature">
 						<div class = "container-fluid">
 							<div class = "row justify-content-center">
 								<i class="fa fa-search fa-3x"></i>
 							</div>
 						</div>
-						<div class = "container mainfeature" id = "searchfeature">
+						<div class = "container" id = "searchfeature">
 							<div id = "searchform">
 								<h3 class = "text-center"> search </h3>
 								<form action = "./item/search" method = "POST">
@@ -26,86 +26,98 @@
 							</div>
 						</div>
 					</div>
-					<div class ="col-5 border">
-						<div class = "container-fluid position-absolute">
-							<button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#filterform" aria-expanded="false" aria-controls="filterform">
-								<i class="fa fa-cog"></i>
-							</button>
-							<div class="collapse container" id="filterform">
-										<div id = "filteroptions">
-												<h4 class = "text-center"> filters </h4>
-												<br>
-												<p> 
-													<input type="checkbox" name="filterByPosition" class = "filterdata" checked = "true"> show the first
-													<input type="number" name="position" class = "filterdata" value= "500">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByTrend" class = "filterdata"> trend
-													<select name = "trendType" class = "filterdata">
-														<option value="none">none</option>
-														<option value="filterByPositiveTrend">positive</option>
-														<option value="filterByNegativeTrend">negative</option>
-														<option value="filterByNeutralTrend">neutral</option>
-													</select>
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByPriceLowerBound" class = "filterdata"> minimum price
-													<input type="number" name="priceLowerBound" class = "filterdata">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByPriceUpperBound" class = "filterdata"> maximum price
-													<input type="number" name="priceUpperBound" class = "filterdata">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByVolumeLowerBound" class = "filterdata"> minimum volume
-													<input type="number" name="volumeLowerBound" class = "filterdata">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByVolumeUpperBound" class = "filterdata"> maximum volume
-													<input type="number" name="volumeUpperBound" class = "filterdata">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByItemLimitUpperBound" class = "filterdata"> maximum item limit
-													<input type="number" name="itemLimitUpperBound" class = "filterdata">
-												</p>
-												<p> 
-													<input type="checkbox" name="filterByItemLimitLowerBound" class = "filterdata"> minimum item limit
-													<input type="number" name="itemLimitLowerBound" class = "filterdata">
-												</p>
+					<div class ="col-5 border mainfeature">
+						<div class = "container-fluid position-absolute" style = "left : 0px; z-index : 1">
+							<div class = "row justify-content-end">
+								<div class = "col-2 mt-3">
+									<button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#filterform" aria-expanded="false" aria-controls="filterform">
+										<i class="fa fa-cog"></i>
+									</button>
+								</div>
+							</div>
+							<div class="collapse container-fluid" id="filterform">
+								<div id = "filteroptions">
+										<h4 class = "text-center"> filters </h4>
+										<br>
+										<p> 
+											<input type="checkbox" name="filterByPosition" class = "filterdata" checked = "true"> show the first
+											<input type="number" name="position" class = "filterdata" value= "500">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByTrend" class = "filterdata"> trend
+											<select name = "trendType" class = "filterdata">
+												<option value="none">none</option>
+												<option value="filterByPositiveTrend">positive</option>
+												<option value="filterByNegativeTrend">negative</option>
+												<option value="filterByNeutralTrend">neutral</option>
+											</select>
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByPriceLowerBound" class = "filterdata"> minimum price
+											<input type="number" name="priceLowerBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByPriceUpperBound" class = "filterdata"> maximum price
+											<input type="number" name="priceUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByVolumeLowerBound" class = "filterdata"> minimum volume
+											<input type="number" name="volumeLowerBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByVolumeUpperBound" class = "filterdata"> maximum volume
+											<input type="number" name="volumeUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByItemLimitUpperBound" class = "filterdata"> maximum item limit
+											<input type="number" name="itemLimitUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByItemLimitLowerBound" class = "filterdata"> minimum item limit
+											<input type="number" name="itemLimitLowerBound" class = "filterdata">
+										</p>
 							  	</div>
 							</div>
 						</div>
-
-						<div class ="container-fluid mainfeature" id = "sortfeature">
+						<div class ="container-fluid" id = "sortfeature">
 							<div class = "container-fluid">
 								<div class = "row justify-content-center">
 									<i class="fa fa-line-chart fa-3x"></i>
 								</div>
 							</div>
-							<form class = "pl-5" id = "sortform" action = "./item/sort" method = "GET">
+							<form id = "sortform" action = "./item/sort" method = "GET">
 								<h3 class = "text-center"> sort </h3>
 								<p> 
-									<input type="radio" name = "typeSort" value="roundedSort"> rounded sort
+									<input type="radio" name = "typeSort" value="roundedSort"> rounded values
+									<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="values are rounded down before comparison e.g. 123 -> 100, 4321 -> 1000">
+										<i class="fa fa-info-circle"></i>
+									</button>
 								</p>
 								<p> 
-									<input type="radio" name = "typeSort" value="weightedSort"> weighted sort
+									<input type="radio" name = "typeSort" value="weightedSort"> weighted values
+									<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="weighted values (adjusted by you) are compared instead of the raw value, must select a value to sort by before toggling">
+										<i class="fa fa-info-circle"></i>
+									</button>
 								</p>
-								<button type = "button" id = "addoption"> <i class="fa fa-plus"></i></button>
 								<div class = "sortoptions">
 									<select class = "sortby" id = "firstselect" name = "sortby[0]">
 										<option value="sortByNone">none</option>
 										<option value="sortByPrice">by current price</option>
 										<option value="sortByVolume">by current volume</option>
 									</select>
+									<button type = "button" id = "addoption"> <i class="fa fa-plus"></i></button>
+									<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="select a value to sort by">
+										<i class="fa fa-info-circle"></i>
+									</button>
 									<div class="progress position-relative d-none">
 										<div class="progress-bar" role="progressbar"></div>
 										<input name = "weight[0]" class = "position-absolute weightrange" type = "range">
 									</div>
 								</div>
-								<div class = "d-flex justify-content-center">
+								<div class = "d-flex justify-content-center mt-2">
 									<button id = "sortsubmit" class = "btn btn-light">sort</button>
 								</div>
 							</form>
