--- a/views/partials/profits.ejs
+++ b/views/partials/profits.ejs
@@ -11,7 +11,7 @@
 <% if (user){ %>
 	<div class = "col-2 mt-5">
 		<% for (var i = 0; i < profits.length; i ++) { %>
-			<div class = "container border border-success mb-2">
+			<div class = "container border border-success mb-2 profits">
 				<div class = "row justify-content-between">
 					<div class = "col-4">
 						<div style = "font-size: 12px; font-weight: 800">
