--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header.ejs %>
 
-<div class = "container mt-5">
+<div class = "container mt-5" id = "login">
 	<div class = "row justify-content-center">
 		<div class = "col-5">
 			<% if (message !== null) {%>
