--- a/views/results.ejs
+++ b/views/results.ejs
@@ -3,7 +3,7 @@
 <div class = "container-fluid">
     <div class = "row justify-content-around">
         <% include ./partials/profits.ejs %>
-        <div class = "col-8 mt-5">
+        <div class = "col-8 mt-4" id = "results">
             <h1 class = "text-center"> <%=items.length%> results for "<%= query %>"</h1>
             <table id = "results">
                 <% if (items.length > 0) { %>
@@ -47,6 +47,7 @@
             <% if (items.length > 0) { %>
                 <div class = "d-flex justify-content-center">
                     <div>
+                        <button class = "btn btn-outline-primary mr-5" id = "first"> 1 </button>
                         <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
                         <button class = "btn btn-outline-primary" id = "prev"> < </button>
                         <% for(var i = 1; i <= Math.ceil((items.length) / 10); i++) { %>
@@ -54,6 +55,7 @@
                         <% } %>
                         <button class = "btn btn-outline-primary" id = "next"> > </button>
                         <button class = "btn btn-outline-primary" id = "nextRow"> >> </button>
+                        <button class = "btn btn-outline-primary ml-5" id = "last"> <%=Math.ceil((items.length) / 10)%> </button>
                     </div>
                 </div>
             <% } %>
@@ -204,6 +206,18 @@
         {
             window.location.hash = ((currentRow - 1)  * 5) - 4;
         }
+       
+    });
+
+    $("#first").click(function ()
+    {
+         window.location.hash = 1;
+       
+    });
+
+    $("#last").click(function ()
+    {
+        window.location.hash = numPages;
        
     });
 </script>
