--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,13 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link rel = "stylesheet" href = "/bootstrap.css">
 
+<!-- enable popovers -->
+<script>
+	$(function () {
+  $('[data-toggle="popover"]').popover()
+});
+</script>
+
 <!-- chart.js -->
 <script src="/Chart.js"></script>
 <link rel = "stylesheet" href = "/Chart.css">
