--- a/views/partials/losses.ejs
+++ b/views/partials/losses.ejs
@@ -12,7 +12,7 @@
 <% if (user){ %>
 	<div class = "col-2 mt-5">
 		<% for (var i = 0; i < losses.length; i ++) { %>
-			<div class = "container border border-danger mb-2">
+			<div class = "container border border-danger mb-2 losses">
 				<div class = "row justify-content-between">
 					<div class = "col-4">
 						<div style = "font-size: 12px; font-weight: 800">
