--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,8 @@
 <!-- enable popovers -->
 <script>
 	$(function () {
-  $('[data-toggle="popover"]').popover()
-});
+  $('[data-toggle="tooltip"]').tooltip()
+})
 </script>
 
 <!-- chart.js -->
