--- a/views/results.ejs
+++ b/views/results.ejs
@@ -5,17 +5,17 @@
         <% include ./partials/profits.ejs %>
         <div class = "col-8 mt-4" id = "results">
             <h1 class = "text-center"> <%=items.length%> results for "<%= query %>"</h1>
-            <table id = "results">
+            <table class="table table-bordered table-striped table-sm">
                 <% if (items.length > 0) { %>
                     <tr>
                         <th></th>
-                        <th>ID</th> 
-                        <th>ITEM LIMIT</th> 
-                        <th>CURRENT PRICE</th>
-                        <th>CURRENT VOLUME</th>
-                        <th>CURRENT TREND</th>
-                        <th>CURRENT TREND DURATION</th>
-                        <th>MEMBERS ONLY</th>
+                        <!-- <th>ID</th>  -->
+                        <!-- <th>ITEM LIMIT</th>  -->
+                        <th>Current Price</th>
+                        <th>Current Volume</th>
+                        <th>Current Price Trend</th>
+                        <!-- <th>CURRENT TREND DURATION</th> -->
+                        <!-- <th>MEMBERS ONLY</th> -->
                     </tr>
                 <% } %>
                 <% for(var i=0; i<items.length; i++) { %>
@@ -34,13 +34,13 @@
                                <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
                                <img src = "/images/small/<%=items[i].id%>.gif">
                             </td>
-                           <td> <%= items[i].id %> </td>
-                           <td> <%= items[i].limit %> </td>
+                          <!--  <td> <%= items[i].id %> </td> -->
+                          <!--  <td> <%= items[i].limit %> </td> -->
                            <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
                            <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
                            <td> <%= items[i].statdata.currentTrend%> </td>
-                           <td> <%= items[i].statdata.currentTrendDuration%> </td>
-                           <td> <%= items[i].members %> </td>
+                           <!-- <td> <%= items[i].statdata.currentTrendDuration%> </td> -->
+                           <!-- <td> <%= items[i].members %> </td> -->
                        </tr>
                 <% } %>
             </table>
